# rawterm

./: .clangd  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO  build.ps1  build.sh  build.zig  escape.cpp  main.cpp  rawterm.h  rawterm_extras.h
.github/workflows/: main.yml
docs/: color.h.md  core.h.md  cursor.h.md  pane.h.md  text.h.md
examples/: CMakeLists.txt  borders.cpp  cells.cpp  colors.cpp  cursor_position.cpp  game.cpp  hello_world.cpp  keys.cpp  raw_escapes.cpp  red_blue_panes.cpp  vertical_menu.cpp
rawterm/: CMakeLists.txt  color.cpp  color.h  core.cpp  core.h  cursor.cpp  cursor.h  exceptions.h  screen.cpp  screen.h  text.cpp  text.h
rawterm/extras/: border.h  extras.cpp  extras.h  menu.h  pane.cpp  pane.h  pane2.h
tests/: CMakeLists.txt  border_test.cpp  color_test.cpp  core_test.cpp  cursor_test.cpp  menu_test.cpp  screen_test.cpp  text_test.cpp
tests/include/: ut.hpp
